--- a/style.css
+++ b/style.css
@@ -9,12 +9,22 @@
 body{
   /* background: #a595ff; */
   /* background-image: url("pulau-padar.jpg"); */
-  padding: 0 20px;
+  padding: 0;
+  margin: 0;
+  /* border: 2px solid black; */
 }
 
 ::selection{
   color: #fff;
   background: #664AFF;
+}
+.bg-tambah{
+  top: 0; 
+  margin: 0% 0%; 
+  width: 100%; 
+  height: 5rem; 
+  background-color: rgb(127, 127, 250); 
+  position: absolute;
 }
 
 .wrapper{
@@ -92,6 +102,7 @@ body{
 }
 
 .inner {
+  height: 15rem;
   overflow: hidden;
 }
 
@@ -123,7 +134,8 @@ body{
 
 .btn2.active {
   background-color: #30e7ff;
-  color: rgb(182, 133, 133);
+  /* color: rgb(182, 133, 133); */
+  color: rgb(0, 0, 0);
 }
 .filterDiv {
   display: none;
@@ -135,4 +147,16 @@ body{
 
 .container {
   overflow: hidden;
+}
+#isi-menu {
+  list-style: none;
+}
+.card-img-top {
+  width: 125%;
+}
+.deskripsi {
+  overflow-y: scroll; 
+  scrollbar-width: none; 
+  height: 120px; 
+  margin-top: 10px;
 }
